project/stage/tests/reject/bad_return_statement.ul
int foo(){
  return;
}

void main(){
  return 1;
}